--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -76,7 +76,8 @@
         "Effects": "Effects",
         "CharacterEffects": "Character Effects",
         "Prerequisites": "Prerequisites",
-        "CombatPowers": "Combat Powers"
+        "CombatPowers": "Combat Powers",
+        "EmbeddedItems": "Embedded Items"
       },
       "Transformation": {
         "PowerAdjustment": "Power Adjustment",
@@ -89,6 +90,54 @@
         "ReadOnlyNote": "Note: Embedded combat powers open in read-only mode. To edit a power, modify the original item in the actor's inventory.",
         "DragToExtract": "Drag to extract this combat power as a new item",
         "DragNote": "Tip: Drag combat powers to actors, compendiums, or item tabs to create copies."
+      },
+      "ActionCard": {
+        "PopupTitle": "Execute Action Card",
+        "Mode": "Mode",
+        "SelectMode": "Select action card mode",
+        "AttackChainMode": "Attack Chain",
+        "SavedDamageMode": "Saved Damage",
+        "EmbeddedItem": "Embedded Item",
+        "AttackChain": "Attack Chain Configuration",
+        "FirstStat": "First Stat",
+        "SecondStat": "Second Stat",
+        "DamageConfig": "Damage Configuration",
+        "DamageCondition": "Apply Damage",
+        "DamageFormula": "Damage Formula",
+        "DamageType": "Damage Type",
+        "DamageOn": "Damage on",
+        "StatusConfig": "Status Configuration",
+        "StatusCondition": "Apply Status",
+        "StatusOn": "Status on",
+        "SavedDamage": "Saved Damage Configuration",
+        "SavedDamageConfiguration": "Saved Damage Configuration",
+        "SavedFormula": "Damage Formula",
+        "SavedType": "Damage Type",
+        "Never": "Never",
+        "OneSuccess": "One Success",
+        "TwoSuccesses": "Two Successes",
+        "Damage": "Damage",
+        "Heal": "Heal",
+        "Execute": "Execute",
+        "ExecuteChain": "Execute Chain",
+        "ApplyDamage": "Apply Damage",
+        "ActionItem": "Action Item",
+        "ActionItemDescription": "The item that will be rolled when this action card is executed",
+        "Effects": "Effects",
+        "EffectsDescription": "Status effects and gear that will be applied when chain conditions are met",
+        "ChainConfiguration": "Chain Configuration",
+        "NoActionItem": "No action item configured",
+        "DropActionItemHere": "Drop an action item here",
+        "NoEffects": "No effects configured",
+        "DropEffectHere": "Drop status effects or gear here",
+        "EffectNotes": "Effects are applied when chain conditions are met",
+        "DragNote": "Tip: Drag items to extract copies",
+        "DragToExtract": "Drag to extract this item",
+        "GearCategoryQuestion": "Where should this gear be placed?",
+        "ItemAddedToAction": "Item added to action slot",
+        "ItemAddedToEffects": "Item added to effects",
+        "GearAddedToAction": "Gear added to action slot",
+        "GearAddedToEffects": "Gear added to effects"
       }
     }
   }
