--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -30,13 +30,29 @@
       "NameRequired": "Item name is required",
       "ImageRequired": "Item image is required",
       "InvalidQuantity": "Quantity must be a positive number",
+      "ActionCardItemTypes": "Action cards can only embed items of type: {supported}. Cannot add {type}.",
+      "ActionCardEffectTypes": "Action cards can only embed effects of type: {supported}. Cannot add {type}.",
+      "ActionCardStatusTypes": "Action cards can only embed status effects. Cannot add {type}.",
+      "TransformationItemTypes": "Transformations can only embed combat powers.",
       "InvalidWeight": "Weight must be a valid number",
       "InvalidCost": "Cost must be a valid number",
-      "TransformationItemTypes": "Only combat powers can be added to transformations.",
       "MissingAbility": "Missing ability",
       "MissingTransformation": "Missing transformation",
       "ConfigureTokenError": "Failed to configure token for {actorName}",
-      "SetSheetThemeError": "Failed to set sheet theme for {userName}"
+      "SetSheetThemeError": "Failed to set sheet theme for {userName}",
+      "PopupClassImportError": "Failed to load popup for {itemName} ({className})",
+      "BypassExecutionError": "Failed to execute {itemType} '{itemName}': {error}",
+      "BypassError": "Failed to execute '{itemName}': {error}",
+      "FeatureError": "Cannot use Feature right now!",
+      "StatusError": "Cannot use Status right now!",
+      "ItemError": "Cannot use Item right now!",
+      "ActionCardError": "Cannot execute Action Card right now!",
+      "SheetContextError": "Failed to prepare sheet context for {itemName}",
+      "RollError": "Failed to execute roll for {itemName}",
+      "SheetRender": "Failed to render sheet for {itemName}",
+      "Validation": "Validation failed for {itemName}",
+      "NoPermission": "You do not have permission to perform this action",
+      "NotTransformation": "Item is not a transformation"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
