--- a/lang/src/en/chat.json
+++ b/lang/src/en/chat.json
@@ -7,6 +7,11 @@
         "Applied": "Applied",
         "ApplyDamage": "Apply Damage",
         "ApplyStatus": "Apply Status Effects",
+        "DiscardDamage": "Discard",
+        "DiscardStatus": "Discard",
+        "ApplyAll": "Apply All",
+        "DiscardAll": "Discard All",
+        "MultipleEffectsPending": "Multiple Effects Pending",
         "TargetUnavailable": "Target no longer available"
       }
     }
