Feature: delay between action card execution and each step of its processing.

--- a/lang/en.json
+++ b/lang/en.json
@@ -652,7 +652,9 @@
     "GearEquippedDefaultName": "Gear Creator: Default Equipped",
     "GearEquippedDefaultHint": "If enabled, gear creator will mark new gear as equipped by default.",
     "EnableActionCardChainsName": "Enable Action Card Attack Chains",
-    "EnableActionCardChainsHint": "If enabled, players can use action cards with attack chains that automatically proceed to damage rolls when both attacks hit. Disable to prevent automatic damage forwarding.",
+    "EnableActionCardChainsHint": "When enabled, action cards can use attack chains to apply damage and status effects based on roll results.",
+    "ActionCardExecutionDelayName": "Action Card Execution Delay",
+    "ActionCardExecutionDelayHint": "Delay in milliseconds between each step of action card execution (0-10000ms, in 100ms increments).",
     "CrToXpFormulaName": "CR to XP Calculation",
     "CrToXpFormulaHint": "Formula for converting Challenge Rating to Experience Points. Use @cr to reference the CR value. Use simple math operations (+, -, *, /) and dice notation. Example: '@cr * 200 + @cr * @cr * 50'",
     "DefaultTokenVisionRangeName": "Default Token Vision Range",
