Feature: Standardized action card popup and ability to advance initative following roll execution.

--- a/lang/en.json
+++ b/lang/en.json
@@ -122,7 +122,12 @@
         "ApplyDamage": "Apply Damage",
         "ChainConfiguration": "Chain Configuration",
         "RollValue": "Roll Value",
-        "StatusThreshold": "Threshold Value"
+        "StatusThreshold": "Threshold Value",
+        "AdvanceInitiative": {
+          "label": "Advance Initiative",
+          "hint": "When enabled, advances initiative after execution. Can only be used on your turn."
+        },
+        "AdvanceInitiativeTurnError": "You can only use this action card on your turn when 'Advance Initiative' is enabled."
       },
       "Colors": {
         "BgColor": {
@@ -276,7 +281,7 @@
         "Controls": "Controls",
         "Edit": "Edit",
         "Delete": "Delete",
-        "NoActionCards": "No action cards created yet.",
+        "NoActionCards": "No action cards available",
         "CreateActionCard": "Create Action Card"
       },
       "ActionCards": {
@@ -480,7 +485,8 @@
           "WithTargets": "There are <strong>{count} target(s)</strong> selected. This will create a transformation for each target and your compendium."
         },
         "ActionCard": {
-          "NoEmbeddedItem": "This action card has no embedded item configured. Please add an item to the action slot before executing."
+          "NoEmbeddedItem": "This action card has no embedded item configured. Please add an item to the action slot before executing.",
+          "TargetingError": "You do not have the correct targets selected for this action card."
         }
       },
       "Placeholders": {
