--- a/lang/src/en/actor.json
+++ b/lang/src/en/actor.json
@@ -59,7 +59,7 @@
         "Controls": "Controls",
         "Edit": "Edit",
         "Delete": "Delete",
-        "NoActionCards": "No action cards created yet.",
+        "NoActionCards": "No action cards available",
         "CreateActionCard": "Create Action Card"
       },
       "ActionCards": {
