Implented potential inventory tracking for player convenience when applying gear items to foes.

--- a/lang/src/en/action-cards.json
+++ b/lang/src/en/action-cards.json
@@ -54,7 +54,20 @@
         "ItemAddedToAction": "'{itemName}' added as action item",
         "ItemAddedToEffects": "'{itemName}' added to effects",
         "GearAddedToAction": "'{itemName}' added as action item",
-        "GearAddedToEffects": "'{itemName}' added to effects"
+        "GearAddedToEffects": "'{itemName}' added to effects",
+        "AdvanceInitiative": {
+          "label": "Advance Initiative",
+          "hint": "When enabled, advances initiative after execution. Can only be used on your turn."
+        },
+        "AdvanceInitiativeTurnError": "You can only use this action card on your turn when 'Advance Initiative' is enabled.",
+        "AttemptInventoryReduction": {
+          "label": "Attempt Effect Inventory Reduction",
+          "hint": "When enabled, attempts to reduce your inventory when applying gear effects. If disabled, gear effects will be applied without checking inventory."
+        },
+        "GearEffectInventoryWarning": "You don't have enough {gearName} in your inventory to apply this effect.",
+        "GearEffectNotFoundWarning": "You don't have {gearName} in your inventory to apply this effect.",
+        "GearEffectInsufficientWarning": "You don't have enough {gearName} in your inventory to apply this effect (need {required}, have {available}).",
+        "GearEffectInventoryError": "Failed to apply gear effect: {error}"
       }
     }
   }
